# mightex-slc-test

./: .gitignore  README.md  pyproject.toml
config/: trigger_config.yaml
docs/: command_reference.md
scripts/: example_usage.py  led_test_cli.py  program_trigger.py
src/mightex_slc/: __init__.py  constants.py  controller.py  exceptions.py  protocol.py  transport.py  trigger_programmer.py
tests/: conftest.py  test_controller.py  test_trigger_programmer.py
